# home-appliances

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  home-appliances.desktop  manage.sh
.github/workflows/: ci.yml  coverage.yml
docs/: brother-printer-protocol.md  gree-protocol.md  network-devices.md  roborock-protocol.md  samsung-tv-protocol.md  session-context.md
docs/issues/: 003-roborock-token-persist.md  005-brother-snmp-status.md  006-brother-ipp-status.md  009-gree-gcm-firmware-compat.md  010-gree-cli-completeness.md  012-brother-probe.md  013-gree-discover-bind-cli.md
docs/issues/done/: 001-roborock-status-query.md  002-roborock-control.md  004-samsung-tv-probe-and-keys.md  007-gree-extended-status-params.md  008-gree-temsen-offset.md  011-samsung-tv-pairing-flow.md  014-multi-device-commands.md  015-gree-temp-readonly-output.md  016-brother-extended-cli.md  017-samsung-tv-multi-key.md  018-post-command-feedback.md  019-man-page.md  020-gree-extended-functional-tests.md  021-roborock-extended-functional-tests.md  022-samsung-tv-extended-functional-tests.md  023-brother-extended-functional-tests.md  024-pty-functional-tests.md  025-cli-output-consistency.md  026-security-file-permissions.md  027-verbose-debug-flag.md  028-install-and-deployment.md  029-config-docs-and-validation.md  030-device-store-robustness.md
docs/issues/new/: 031-pty-mock-combined-tests.md  032-test-coverage-90pct.md  033-general-device-discovery.md
docs/man/: home-appliances.1
docs/userstories/: brother-printer-userstories.md  gree-userstories.md  roborock-userstories.md  samsung-tv-userstories.md
libappliances/: CMakeLists.txt
libappliances/src/core/: base64.c  base64.h  config.c  config.h  logger.c  logger.h  raii.h  subnet_scan.c  subnet_scan.h
libappliances/src/domain/: appliance_service.c  appliance_service.h
libappliances/src/infrastructure/: brother_client.c  brother_client.h  gree_client.c  gree_client.h  roborock_client.c  roborock_client.h  samsung_tv_client.c  samsung_tv_client.h
src/: main.c  main_discovery.c
tests/: CMakeLists.txt
tests/common/: mock_server.h  test_helpers.h
tests/functional/: test_brother_functional.c  test_gree_functional.c  test_roborock_functional.c  test_samsung_tv_functional.c
tests/libpty/: pty_internal.h  pty_screen.c  pty_session.c  pty_sync.c  ptytest.h
tests/pty/: test_pty_ac.c  test_pty_printer.c  test_pty_tv.c  test_pty_vacuum.c
tests/unit/: test_base64.c  test_config.c  test_device_store.c  test_runner.c
